# git-branch-formatter

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: windows.yml
src/: main.cpp
src/app/: MainWindow.cpp  MainWindow.h
src/core/: sanitizer.cpp  sanitizer.h
